--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>reveal-md</title>
+    <title>古川的导航幻灯片</title>
     <link rel="stylesheet" href="./css/reveal.css" />
     <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
@@ -52,7 +52,7 @@ It's obvious.
 
 仓库指引
 
-- [沙雕网页游戏：智能拼图](https://nanarino.github.io/nanarino-jigsaw/)
+- [沙雕网页游戏：智能拼图](https://nanarino.github.io/jigsaw/)
 
   这是一个4*4的拼图还原游戏
 
