--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <title>古川的导航幻灯片</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/css/reveal.css" />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/css/theme/black.css" id="theme" />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/css/highlight/zenburn.css" />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/css/print/paper.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="./css/reveal.css" />
+    <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="./css/highlight/zenburn.css" />
+    <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
 
   </head>
   <body>
@@ -101,8 +101,8 @@ It's obvious.
 </script></section></div>
     </div>
 
-    <script src="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/lib/js/head.min.js"></script>
-    <script src="https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/js/reveal.js"></script>
+    <script src="./lib/js/head.min.js"></script>
+    <script src="./js/reveal.js"></script>
 
     <script>
       function extend() {
@@ -120,13 +120,13 @@ It's obvious.
 
       // Optional libraries used to extend on reveal.js
       var deps = [
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/zoom-js/zoom.js', async: true },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/notes/notes.js', async: true },
-        { src: 'https://raw.githubusercontent.com/nanarino/nanarino.github.io/gh-pages/plugin/math/math.js', async: true }
+        { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
+        { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+        { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+        { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+        { src: './plugin/zoom-js/zoom.js', async: true },
+        { src: './plugin/notes/notes.js', async: true },
+        { src: './plugin/math/math.js', async: true }
       ];
 
       // default options to init reveal.js
