--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>古川的导航幻灯片</title>
+    <title>reveal-md</title>
     <link rel="stylesheet" href="./css/reveal.css" />
     <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
@@ -13,23 +13,25 @@
   </head>
   <body>
     <div class="reveal">
-      <div class="slides"><section  data-markdown><script type="text/template"># nanarino repositories page navigation
+      <div class="slides"><section  data-markdown><script type="text/template"># nanarino navigation PPT
 
-欢迎访问<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のgithub ppt
+欢迎播放：<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
+
+<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href='https://raw.githubusercontent.com/nanarino/nanarino.github.io/master/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换主题</a>
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
-大家好
+大家好，
 
-我是培训时长两年半的python练习生
+我是培训时长两年半的python练习生，
 
-喜欢增，删，改，查，写bug
+喜欢增，删，改，查，写bug。
 </script></section><section  data-markdown><script type="text/template">
 ## The meaning of username
 
 It's obvious.
 
-意味：古川<ruby>ななり<rp>(</rp><rt>nanari</rt><rp>)</rp></rp>の<rp>(</rp><rt>no</rt><rp>)</rp></ruby>gayhub
+意味：古川<ruby>ななり<rp>(</rp><rt>nanari</rt><rp>)</rp></rp>の<rp>(</rp><rt>no</rt><rp>)</rp></ruby>GithubとbilibiliとQQ。
 </script></section><section  data-markdown><script type="text/template">
 同时，我还是一位
 
@@ -54,23 +56,23 @@ It's obvious.
 
 - [沙雕网页游戏：智能拼图](https://nanarino.github.io/jigsaw/)
 
-  这是一个4*4的拼图还原游戏
+  这是一个4*4的拼图还原游戏，
 
-  是作者才学编程一个月的时候写的
+  是作者才学编程一个月的时候写的，
 
-  可能有一点乱，也没做精灵图优化
+  可能有一点乱，也没做精灵图优化。
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
 仓库指引
 
-- [vue开源UI组件：upImg](https://github.com/nanarino/vue-upImg/blob/master/README.md)
+- [vue开源UI组件：upImg](https://github.com/nanarino/vue-upImg)
 
-  这是一个基于Vue的
+  这是一个基于Vue的，
 
-  用于PC端上传相册功能的UI组件
+  用于PC端上传相册功能的UI组件，
 
-  相比大部分UI上传组件
+  相比大部分UI上传组件，
 
   请求次数更少，适合小带宽。
 </script></section><section  data-markdown><script type="text/template">
@@ -78,30 +80,46 @@ It's obvious.
 
 仓库指引
 
-- [django项目：茶道部](https://github.com/nanarino/cdb/blob/master/README.md)
+- [django项目：茶道部](https://github.com/nanarino/cdb)
 
-  django模板渲染的小型网站
+  django模板渲染的小型网站，
 
-  响应式布局，外观偏台湾动漫风格
+  响应式布局，外观偏台湾动漫风格，
 
   实现了基本的，播放音频，
 
   文章发表，评论，相册上传，
 
-  修改个人信息等功能
+  修改个人信息等功能。
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
 仓库指引
 
-- 其他仓库暂时停更
+- [drf项目：茶道部后端](https://github.com/nanarino/REST_cdb)
+
+- [vue项目：茶道部前端](https://github.com/nanarino/SPA_cdb)
+
+  django项目cdb的分离测试版本，
+
+  采用drf提供RESTful API，
+
+  未完成，暂时不提供更新。
+</script></section><section  data-markdown><script type="text/template">
+## more navigation
+
+其他仓库指引
+
+- [github.io：本ppt页面](https://github.com/nanarino/nanarino.github.io)
+- [demo库：存放示例小项目](https://github.com/nanarino/demo)
+- [pycrypt-file：文件加密小脚本](https://github.com/nanarino/pycrypt-file)
+- [...](https://github.com/nanarino?tab=repositories)
 </script></section><section  data-markdown><script type="text/template">
 <a href="javascript:window.opener=null;window.location.href='https://github.com/nanarino';window.close();">幻灯片播放结束，点击退出</a>
 
 </script></section></div>
     </div>
 
-    <script src="./lib/js/head.min.js"></script>
     <script src="./js/reveal.js"></script>
 
     <script>
@@ -120,7 +138,6 @@ It's obvious.
 
       // Optional libraries used to extend on reveal.js
       var deps = [
-        { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
         { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
         { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
         { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
