--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>reveal-md</title>
     <link rel="stylesheet" href="./css/reveal.css" />
-    <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="./css/theme/black.css" id="theme"  type="text/css"/>
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
     <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
 
