--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>NANARINO PPT</title>
     <link rel="stylesheet" href="./css/reveal.css" />
+    <link rel="stylesheet" href="./css/theme/white.css" id="theme" type="text/css"/>
     <link rel="stylesheet" href="./css/theme/black.css" id="theme" type="text/css"/>
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
     <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
@@ -17,7 +18,7 @@
 
 欢迎播放：<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
 
-<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href='https://nanarino.github.io/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换主题</a>
+<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href=location.origin+'/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换主题</a>
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
