--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ It's obvious.
 - <a href="https://github.com/nanarino/pycrypt-file" target="_blank">pycrypt-file：文件加密小脚本</a>
 - <a href="https://github.com/nanarino?tab=repositories" target="_blank">...</a>
 </script></section><section  data-markdown><script type="text/template">
-<a href="javascript:window.location.href='about:blank';window.close();">幻灯片播放结束，点击退出</a></script></section></div>
+<a href="javascript:window.opener=null;open(location, '_self').close();setTimeout(()=>{alert('浏览器禁用了关闭，请手动关闭标签页')},1000);">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
 
     <script src="./js/reveal.js"></script>
