--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 大家好，
 
-我是培训时长两年半的python练习生，
+我是培训时长两年半的python练习生（不是，
 
 喜欢增，删，改，查，写bug。
 </script></section><section  data-markdown><script type="text/template">
@@ -36,7 +36,31 @@ It's obvious.
 </script></section><section  data-markdown><script type="text/template">
 同时，我还是一位
 
-## <ruby>单<rp>(</rp><rt>D</rt><rp>)</rp></rp>推<rp>(</rp><rt>D</rt><rp>)</rp></ruby>人
+## <ruby>单<rp>(</rp><rt>D</rt><rp>)</rp></rp>推<rp>(</rp><rt>D（不是</rt><rp>)</rp></ruby>人
+
+下面表演『Ayame恋口上』
+</script></section><section  data-markdown><script type="text/template">
+<ruby>言<rp>(<rp><rt>い</rt><rp>)</rp></ruby>いたいことがあるんだよ！
+
+やっぱり<ruby>綾目<rp>(<rp><rt>あやめ</rt><rp>)</rp></ruby>ちゃんはかっこいいよ！
+
+すきすき<ruby>大好<rp>(<rp><rt>だいす</rt><rp>)</rp></ruby>き、やっぱ<ruby>好<rp>(<rp><rt>す</rt><rp>)</rp></ruby>き！
+
+やっと<ruby>見<rp>(<rp><rt>み</rt><rp>)</rp></ruby>つけたお<ruby>姫様<rp>(<rp><rt>ひめさま</rt><rp>)</rp></ruby>！
+
+<ruby>僕<rp>(<rp><rt>ぼく</rt><rp>)</rp></ruby>が<ruby>生<rp>(<rp><rt>う</rt><rp>)</rp></ruby>まれてきた<ruby>理由<rp>(<rp><rt>りゆう</rt><rp>)</rp></ruby>？
+
+それは<ruby>綾目<rp>(<rp><rt>あやめ</rt><rp>)</rp></ruby>ちゃんに<ruby>出会<rp>(<rp><rt>であ</rt><rp>)</rp></ruby>うため！
+
+<ruby>僕<rp>(<rp><rt>ぼく</rt><rp>)</rp></ruby>と<ruby>一緒<rp>(<rp><rt>いっしょ</rt><rp>)</rp></ruby>に<ruby>人生歩<rp>(<rp><rt>じんせいあゆ</rt><rp>)</rp></ruby>もう！
+
+<ruby>世界<rp>(<rp><rt>せかい</rt><rp>)</rp></ruby>で<ruby>一番愛<rp>(<rp><rt>いちばんあい</rt><rp>)</rp></ruby>してる！
+
+ア・イ・シ・テ・ル！！
+</script></section><section  data-markdown><script type="text/template">
+横屏会看不全，以上。
+
+下面浏览的是所属本github的仓库:
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
