--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 大家好，
 
-我是培训时长两年半的python练习生（不是，
+我是~~培训时长两年半的python练习生（不是，~~
 
-喜欢增，删，改，查，写bug。
+~~喜欢增，删，改，查，写bug。~~社恐debu。。
 </script></section><section  data-markdown><script type="text/template">
 ## The meaning of username
 
