--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 我是~~培训时长两年半的python练习生（不是，~~
 
-~~喜欢增，删，改，查，写bug。~~社恐debu。。
+~~喜欢增，删，改，查，写bug。~~社恐debu。
 </script></section><section  data-markdown><script type="text/template">
 ## The meaning of username
 
