--- a/index.html
+++ b/index.html
@@ -13,33 +13,19 @@
 
   </head>
   <body>
-    <div class="reveal">
-      <div class="slides"><section  data-markdown><script type="text/template"># NANARINO NAVIGATION PPT
+        <div class="reveal">
+      <div class="slides"><section  data-markdown><script type="text/template"># NANARINO PPT
 
-欢迎播放：<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
+<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
 
-<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href=location.origin+'/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换主题</a>
+<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href=location.origin+'/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换底色</a>
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
-大家好，
-
-我是~~培训时长两年半的python练习生（不是，~~
-
-~~喜欢增，删，改，查，写bug。~~社恐debu。
+<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>，社恐debu，狗狗单推人。
 </script></section><section  data-markdown><script type="text/template">
-## The meaning of username
+## 『Ayame恋口上』
 
-It's obvious.
-
-意味：古川<ruby>ななり<rp>(</rp><rt>nanari</rt><rp>)</rp></rp>の<rp>(</rp><rt>no</rt><rp>)</rp></ruby>GithubとbilibiliとQQ。
-</script></section><section  data-markdown><script type="text/template">
-同时，我还是一位
-
-## <ruby>单<rp>(</rp><rt>D</rt><rp>)</rp></rp>推<rp>(</rp><rt>D（不是</rt><rp>)</rp></ruby>人
-
-下面表演『Ayame恋口上』
-</script></section><section  data-markdown><script type="text/template">
 <ruby>言<rp>(<rp><rt>い</rt><rp>)</rp></ruby>いたいことがあるんだよ！
 
 やっぱり<ruby>綾目<rp>(<rp><rt>あやめ</rt><rp>)</rp></ruby>ちゃんはかっこいいよ！
@@ -47,7 +33,7 @@ It's obvious.
 すきすき<ruby>大好<rp>(<rp><rt>だいす</rt><rp>)</rp></ruby>き、やっぱ<ruby>好<rp>(<rp><rt>す</rt><rp>)</rp></ruby>き！
 
 やっと<ruby>見<rp>(<rp><rt>み</rt><rp>)</rp></ruby>つけたお<ruby>姫様<rp>(<rp><rt>ひめさま</rt><rp>)</rp></ruby>！
-
+</script></section><section  data-markdown><script type="text/template">
 <ruby>僕<rp>(<rp><rt>ぼく</rt><rp>)</rp></ruby>が<ruby>生<rp>(<rp><rt>う</rt><rp>)</rp></ruby>まれてきた<ruby>理由<rp>(<rp><rt>りゆう</rt><rp>)</rp></ruby>？
 
 それは<ruby>綾目<rp>(<rp><rt>あやめ</rt><rp>)</rp></ruby>ちゃんに<ruby>出会<rp>(<rp><rt>であ</rt><rp>)</rp></ruby>うため！
@@ -58,9 +44,9 @@ It's obvious.
 
 ア・イ・シ・テ・ル！！
 </script></section><section  data-markdown><script type="text/template">
-横屏会看不全，以上。
+下面浏览的是所属本github的仓库
 
-下面浏览的是所属本github的仓库:
+非开发者退散
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
@@ -83,7 +69,7 @@ It's obvious.
 
   这是一个4*4的拼图还原游戏，
 
-  是作者才学编程一个月的时候写的，
+  是nanari才学编程一个月的时候写的，
 
   可能有一点乱，也没做精灵图优化。
 </script></section><section  data-markdown><script type="text/template">
@@ -91,15 +77,15 @@ It's obvious.
 
 仓库指引
 
-- <a href="https://github.com/nanarino/vue-upImg" target="_blank">vue开源UI组件：upImg</a>
+- <a href="https://github.com/nanarino/vue-upImg" target="_blank">vue上传用组件：upImg</a>
 
   这是一个基于Vue的，
 
-  用于PC端上传相册功能的UI组件，
+  用于PC端上传相册/多文件功能的UI组件，
 
-  相比大部分UI上传组件，
+  与其他大部分上传组件不同，
 
-  请求次数更少，适合小带宽。
+  采用前端预览一次性上传的逻辑。
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
@@ -137,7 +123,7 @@ It's obvious.
 
 - <a href="https://github.com/nanarino/nanarino.github.io" target="_blank">github.io：本ppt页面</a>
 - <a href="https://github.com/nanarino/demo" target="_blank">demo库：存放示例小项目</a>
-- <a href="https://github.com/nanarino/pycrypt-file" target="_blank">pycrypt-file：文件加密小脚本</a>
+- <a href=" https://github.com/nanarino/CUR_INF_create" target="_blank">CUR_INF_create：鼠标主题安装脚本</a>
 - <a href="https://github.com/nanarino?tab=repositories" target="_blank">...</a>
 </script></section><section  data-markdown><script type="text/template">
 <a href="javascript:window.opener=null;open(location, '_self').close();setTimeout(()=>{alert('浏览器禁用了关闭，请手动关闭标签页')},1000);">幻灯片播放结束，点击退出</a></script></section></div>
