--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
-<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>，社恐debu，狗狗单推人。
+<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>，社恐debu。
+
+喜欢音游，想成为画佬。狗狗单推人。
 </script></section><section  data-markdown><script type="text/template">
 ## 『Ayame恋口上』
 
@@ -117,14 +119,12 @@
 
   未完成，暂时不提供更新。
 </script></section><section  data-markdown><script type="text/template">
-## more navigation
+## more info
 
-其他仓库指引
+联系方式
 
-- <a href="https://github.com/nanarino/nanarino.github.io" target="_blank">github.io：本ppt页面</a>
-- <a href="https://github.com/nanarino/demo" target="_blank">demo库：存放示例小项目</a>
-- <a href=" https://github.com/nanarino/CUR_INF_create" target="_blank">CUR_INF_create：鼠标主题安装脚本</a>
-- <a href="https://github.com/nanarino?tab=repositories" target="_blank">...</a>
+- 哔哩哔哩：古川ななり
+- 电子邮箱：`qq431756801@163.com`
 </script></section><section  data-markdown><script type="text/template">
 <a href="javascript:window.opener=null;open(location, '_self').close();setTimeout(()=>{alert('浏览器禁用了关闭，请手动关闭标签页')},1000);">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
