--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 联系方式
 
 - 哔哩哔哩：古川ななり
-- 邮箱：`qq431756801@163.com`
+- 邮箱：<br>`qq431756801@163.com`
 </script></section><section  data-markdown><script type="text/template">
 <a href="javascript:window.opener=null;open(location, '_self').close();setTimeout(()=>{alert('浏览器禁用了关闭，请手动关闭标签页')},1000);">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
