DEL  删除废话 停用CSS切换功能

--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
 
     <title>NANARINO PPT</title>
     <link rel="stylesheet" href="./css/reveal.css" />
-    <link rel="stylesheet" href="./css/theme/white.css" type="text/css"/>
-    <link rel="stylesheet" href="./css/theme/black.css" id="theme" type="text/css"/>
+    <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
     <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
 
   </head>
   <body>
-        <div class="reveal">
+    <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"># NANARINO PPT
 
 <ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
 
-<a onclick="if(window.a===undefined){window.a=true};document.getElementById('theme').href=location.origin+'/css/theme/'+['black','white'][Number(window.a)]+'.css';window.a=!window.a">切换底色</a>
+![](./img/rh.gif)
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
@@ -46,9 +45,7 @@
 
 ア・イ・シ・テ・ル！！
 </script></section><section  data-markdown><script type="text/template">
-下面浏览的是所属本github的仓库
-
-非开发者退散
+さあ，细数我的github仓库吧
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
 
@@ -56,77 +53,21 @@
 
 - <a href="https://nanarino.github.io/markdown-note/" target="_blank">基础知识笔记：markdown-note</a>
 
-  它包括了基础语法和常用模块/库：
-
-  - JavaScript（es5/6+）
-  - Python（3.6.8）
-
-  也包含了一些数据库指令，web框架的简单知识。
-</script></section><section  data-markdown><script type="text/template">
-## navigation
-
-仓库指引
-
 - <a href="https://nanarino.github.io/jigsaw/" target="_blank">沙雕网页游戏：智能拼图</a>
-
-  这是一个4*4的拼图还原游戏，
-
-  是nanari才学编程一个月的时候写的，
-
-  可能有一点乱，也没做精灵图优化。
-</script></section><section  data-markdown><script type="text/template">
-## navigation
-
-仓库指引
 
 - <a href="https://github.com/nanarino/vue-upImg" target="_blank">vue上传用组件：upImg</a>
 
-  这是一个基于Vue的，
-
-  用于PC端上传相册/多文件功能的UI组件，
-
-  与其他大部分上传组件不同，
-
-  采用前端预览一次性上传的逻辑。
-</script></section><section  data-markdown><script type="text/template">
-## navigation
-
-仓库指引
-
 - <a href="https://github.com/nanarino/cdb" target="_blank">django项目：茶道部</a>
-
-  django模板渲染的小型网站，
-
-  响应式布局，外观偏台湾动漫风格，
-
-  实现了基本的，播放音频，
-
-  文章发表，评论，相册上传，
-
-  修改个人信息等功能。
-</script></section><section  data-markdown><script type="text/template">
-## navigation
-
-仓库指引
-
-- <a href="https://github.com/nanarino/REST_cdb" target="_blank">drf项目：茶道部后端</a>
-
-- <a href="https://github.com/nanarino/SPA_cdb" target="_blank">vue项目：茶道部前端</a>
-
-  django项目cdb的分离测试版本，
-
-  采用drf提供RESTful API，
-
-  未完成，暂时不提供更新。
+-  <a href=" https://github.com/nanarino?tab=repositories" target="_blank">...</a>
 </script></section><section  data-markdown><script type="text/template">
 ## more info
 
 联系方式
 
+- `qq431756801@163.com`
 - 哔哩哔哩：古川ななり
-- 邮箱：<br>`qq431756801@163.com`
 </script></section><section  data-markdown><script type="text/template">
-<a href="javascript:window.opener=null;open(location, '_self').close();setTimeout(()=>{alert('浏览器禁用了关闭，请手动关闭标签页')},1000);">幻灯片播放结束，点击退出</a></script></section></div>
+<a href="javascript:setInterval('alert(`你出不去了`)',2000);">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
 
     <script src="./js/reveal.js"></script>
