--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 - `qq431756801@163.com`
 - 哔哩哔哩：古川ななり
 </script></section><section  data-markdown><script type="text/template">
-<a href="javascript:setInterval('alert(`你出不去了`)',2000);">幻灯片播放结束，点击退出</a></script></section></div>
+<a href="javascript:while(1){alert('你出不去了')};">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
 
     <script src="./js/reveal.js"></script>
