--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>のスライドフィルム
 
-![](./img/rh.gif)
+![这张像素画不是我做的](./img/rh.gif)
 </script></section><section  data-markdown><script type="text/template">
 ## Self introduction
 
-<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>，社恐debu。
+<ruby>古川<rp>(<rp><rt>こがわ</rt><rp>)</rp>七<rp>(</rp><rt>&nbsp;なな</rt><rp>)</rp>里<rp>(</rp><rt>り&nbsp;</rt><rp>)</rp></ruby>です。社恐debu。
 
-喜欢音游，想成为画佬。狗狗单推人。
+喜欢音游。想成为~~仮面ライダー~~。狗狗单推人。
 </script></section><section  data-markdown><script type="text/template">
 ## 『Ayame恋口上』
 
@@ -45,6 +45,12 @@
 
 ア・イ・シ・テ・ル！！
 </script></section><section  data-markdown><script type="text/template">
+Minato![皆](./img/aqua.jpg)↓
+
+Nakiri![切](./img/ayame.jpg)↓
+
+Super best match
+
 さあ，细数我的github仓库吧
 </script></section><section  data-markdown><script type="text/template">
 ## navigation
@@ -55,17 +61,19 @@
 
 - <a href="https://nanarino.github.io/jigsaw/" target="_blank">沙雕网页游戏：智能拼图</a>
 
-- <a href="https://github.com/nanarino/vue-upImg" target="_blank">vue上传用组件：upImg</a>
+- <a href="https://nanarino.github.io/vue-upImg/" target="_blank">vue上传用组件：upImg</a>
 
 - <a href="https://github.com/nanarino/cdb" target="_blank">django项目：茶道部</a>
--  <a href=" https://github.com/nanarino?tab=repositories" target="_blank">...</a>
+
+- <a href="https://github.com/nanarino?tab=repositories" target="_blank">...</a>
 </script></section><section  data-markdown><script type="text/template">
 ## more info
 
 联系方式
 
-- `qq431756801@163.com`
-- 哔哩哔哩：古川ななり
+- <a href="https://mail.163.com/" target="_blank">qq431756801@163.com</a>
+
+- <a href="https://space.bilibili.com/87370954" target="_blank">哔哩哔哩：古川ななり</a>
 </script></section><section  data-markdown><script type="text/template">
 <a href="javascript:while(1){alert('你出不去了')};">幻灯片播放结束，点击退出</a></script></section></div>
     </div>
